Scrollbar opacity fixed, scrollbar in node_modules.

--- a/src/assets/styles/custom-scroll.less
+++ b/src/assets/styles/custom-scroll.less
@@ -13,7 +13,7 @@
 }
 
 .sideScroll:hover .mCSB_dragger_bar {
-  opacity: 1;
+  opacity: 0.75;
 }
 
 .mCSB_dragger_bar {
